src/index.css
@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Tiro+Bangla:ital@0;1&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: "Outfit","Tiro Bangla", sans-serif;
}
@layer base {
  html, body {
    @apply overflow-x-hidden;
    
  }
}
.fc .fc-daygrid-day.fc-day-today {
  background-color: rgb(184, 239, 253) !important; /* yellow-100 */
}



@layer utilities {
    @media (min-width: 200px) {
    .padding {
      padding-top: 80px;
    }
  }


  @media (min-width: 400px) and (max-width: 700px) {
    .padding {
      padding-top: 120px;
    }
  }

   @media (min-width: 701px){
    .padding {
      padding-top: 150px;
    }
  }
}

